layout/generic/nsIScrollableFrame.h
@@ -441,6 +441,11 @@ public:
   virtual bool DecideScrollableLayer(nsDisplayListBuilder* aBuilder,
                                      nsRect* aDirtyRect,
                                      bool aAllowCreateDisplayPort) = 0;
+
+  /**
+   * Notification that this scroll frame is getting its image visibility updated.
+   */
+  virtual void NotifyImageVisibilityUpdate() = 0;
 };
 
 #endif
